--- a/D3D_2/D3D_2.vcxproj.filters
+++ b/D3D_2/D3D_2.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="TransformDialog.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LightDialog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="D3D_2.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="TransformDialog.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="LightDialog.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
