--- a/D3D_2/D3D_2.vcxproj
+++ b/D3D_2/D3D_2.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="D3DManager.h" />
     <ClInclude Include="D3D_2.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="LightDialog.h" />
     <ClInclude Include="PrimitiveShape.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SceneObject.h" />
@@ -140,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="D3DManager.cpp" />
     <ClCompile Include="D3D_2.cpp" />
+    <ClCompile Include="LightDialog.cpp" />
     <ClCompile Include="PrimitiveShape.cpp" />
     <ClCompile Include="SceneObject.cpp" />
     <ClCompile Include="TransformDialog.cpp" />
